chore(core): small perf optimization and code improvements